--- a/Cindy.html
+++ b/Cindy.html
@@ -12,7 +12,7 @@
 
         <center>
 
-            <a href="https://msjadewong.github.io/new-method/ToCindy.mp3" target=_blank>
+            <a href="https://msjadewong.github.io/new-method/ToCindy.m4a" target=_blank>
 
                <h1>Dear Cindy</h1>
 
