--- a/Cindy.html
+++ b/Cindy.html
@@ -12,17 +12,17 @@
 
         <center>
 
-            <a href="https://msjadewong.github.io/new-method/ToCindy.mp3" target=_blank>
+            <a href="https://msjadewong.github.io/nfc-tag-gift/ToCindy.mp3" target=_blank>
 
                <h1>Dear Cindy</h1>
 
             </a><br>
 
-            <a href="https://msjadewong.github.io/new-method/nocutdance.mp4" target=_blank>
+            <a href="https://msjadewong.github.io/nfc-tag-gift/nocutdance.mp4" target=_blank>
                <h1>Monologue</h1>
             </a><br>
 
-            <a href="https://msjadewong.github.io/new-method/neveralone.mp3" target=_blank>
+            <a href="https://msjadewong.github.io/nfc-tag-gift/neveralone.mp3" target=_blank>
 
                <h1>Never Alone</h1>
 
