--- a/DrTso.html
+++ b/DrTso.html
@@ -12,7 +12,7 @@
 
         <center>
 
-            <a href="https://msjadewong.github.io/nfc-tag-gift/TToDrTso.mp3" target=_blank>
+            <a href="https://msjadewong.github.io/nfc-tag-gift/ToDrTso.mp3" target=_blank>
 
                <h1>Dear Dr Tso</h1>
 
